--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 /NiceBTree/NiceBTree/nbproject/private/
 /NiceBTree/NiceBTree/build/
+/OMWG/JavaApplication2/nbproject/private/
+/OMWG/OMWG/nbproject/private/
+/OMWG/OMWG/build/
+/BST/BST/nbproject/private/
+/BST/BST/build/
