--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,14 @@
 /OMWG/OMWG/build/
 /BST/BST/nbproject/private/
 /BST/BST/build/
+/BST/Circuitos/nbproject/private/
+/BST/Servidor/nbproject/private/
+/BST/Servidor/build/
+/BST/Server/nbproject/private/
+/BST/Server/build/
+/BST/SocketServer/nbproject/private/
+/BST/Client/nbproject/private/
+/BST/Client/build/
+/BST/Hello Server/nbproject/private/
+/BST/Hello Server/build/
+/HashIt/HashIt/nbproject/private/
